--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "prod": "npm run production",
+        "production": "mix --production"
     },
     "devDependencies": {
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
+        "terser-webpack-plugin": "^5.3.10",
         "vite": "^5.0.0"
     },
     "dependencies": {
         "@prettier/plugin-php": "^0.22.1",
+        "laravel-mix": "^6.0.49",
         "prettier": "^3.2.4"
     }
 }
